SYS-feat-35a9.12: Support of unlimited types of recyclers for player_race_units 0b0. Also reworked Debris info popup in Universe

--- a/design/templates/OpenGame/planet_governor.tpl.html
+++ b/design/templates/OpenGame/planet_governor.tpl.html
@@ -1,4 +1,4 @@
-<!-- IF PLANET_GOVERNOR_ID || $PLANET_GOVERNOR_ID -->
+<!-- IF PLANET_GOVERNOR_LEVEL > 0 && (PLANET_GOVERNOR_ID || $PLANET_GOVERNOR_ID) -->
   <!-- IF ! $PLANET_GOVERNOR_ID -->
     <!-- DEFINE $PLANET_GOVERNOR_ID = '{PLANET_GOVERNOR_ID}'-->
   <!-- ENDIF -->
