--- a/design/templates/OpenGame/planet_overview.tpl.html
+++ b/design/templates/OpenGame/planet_overview.tpl.html
@@ -1,12 +1,18 @@
 <!-- DEFINE $OVERVIEW = true -->
-<script language="JavaScript" src="js/lib/tw-sack.js"></script>
+<script language="JavaScript" src="js/sn_ajax_send_fleet.js"></script>
 <script type="text/javascript"> 
 
-var SHIP_RECYCLER = {D_SHIP_RECYCLER};
+// var SHIP_RECYCLER = {D_SHIP_RECYCLER};
+var MT_SPY = {D_MT_SPY};
+var MT_COLONIZE = {D_MT_COLONIZE};
+var MT_RECYCLE = {D_MT_RECYCLE};
+var MT_MISSILE = {D_MT_MISSILE};
+var uni_galaxy = "{PLANET_GALAXY}";
+var uni_system = "{PLANET_SYSTEM}";
 
 // fixing bug with sending recycle from planet overview
 // replace sack() with jQuery! Everywhere!!!
-
+/*
 function whenResponse () {
   retVals   = this.response.split("|");
   CmdCode   = retVals[0];
@@ -37,8 +43,8 @@ function doit (order, galaxy, system, planet, planettype, shipcount) {
     ajax.setVar("ship" + SHIP_RECYCLER, shipcount);
   ajax.runAJAX();
 }
-
-  jQuery.noConflict(); 
+*/
+jQuery.noConflict();
 // --></script>
 
 <br>
@@ -140,9 +146,10 @@ function doit (order, galaxy, system, planet, planettype, shipcount) {
 
     <tr>
       <th width=100>{orb}</th>
-      <th colspan="3">{L_sys_metal}: {metal_debris} / {L_sys_crystal}: {crystal_debris}
-        <!-- IF RECYCLERS_SEND -->
-          <br><span id="ov_recycle" style="cursor: pointer" onclick="doit(8, {PLANET_GALAXY}, {PLANET_SYSTEM}, {PLANET_PLANET}, {PLANET_TYPE}, {RECYCLERS_SEND});">{L_type_mission[8]}</span>
+      <th colspan="3" id="fleetstatusrow">{L_sys_metal}: {metal_debris} / {L_sys_crystal}: {crystal_debris}
+        <!-- IF PLANET_RECYCLERS -->
+          <br><span id="ov_recycle" style="cursor: pointer" onclick="doit(MT_RECYCLE, {PLANET_PLANET}, {PLANET_TYPE});">[ {L_type_mission[8]} ]</span>
+          <table id="fleetstatustable" cellspacing="0" cellpadding="0"></table>
         <!-- ENDIF -->
       </th>
     </tr>
