UNI-fix-35a9.17: Fixed error in 35a9.15

--- a/design/templates/OpenGame/universe.tpl.html
+++ b/design/templates/OpenGame/universe.tpl.html
@@ -23,6 +23,8 @@ var uni_spies = '{ACT_SPIO}';
 var uni_death_stars = '{deathStars}';
 var PLANET_RECYCLERS = {PLANET_RECYCLERS};
 
+var MT_MISSILE = {D_MT_MISSILE};
+
 var users = new Array();
 <!-- BEGIN users --><!-- IF users.ID -->
 users[{users.ID}] = {
