STA-feat-35a9.25: Now from statistics and records can be hidden admins and/or specified users. Also added HTML META tag control facility

--- a/design/templates/OpenGame/simple_header.tpl.html
+++ b/design/templates/OpenGame/simple_header.tpl.html
@@ -12,8 +12,12 @@
     <link rel="stylesheet" type="text/css" href="{-path_prefix-}design/css/global-ie.css" />
     <![endif]-->
     <link rel="stylesheet" type="text/css" href="{-path_prefix-}{dpath}skin.css" />
-    <meta name="keywords" content="ogame,огейм,ога,supernova,сверхновая,бесплатная,free,браузерка,онлайн стратегия,онлайновая стратегия,играть,игра,ogame скрипт,xnova" />
-    <meta name="description" content="Сверхновая - онлайн стратегия браузерка огейм доступна играть бесплатно" />
+    <!-- IF ADV_SEO_META_KEYWORDS -->
+    <meta name="keywords" content="{ADV_SEO_META_KEYWORDS}" />
+    <!-- ENDIF -->
+    <!-- IF ADV_SEO_META_DESCRIPTION -->
+    <meta name="description" content="{ADV_SEO_META_DESCRIPTION}" />
+    <!-- ENDIF -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Cache-Control" content="no-cache" />
     {-meta-}
