--- a/design/templates/OpenGame/admin/settings.tpl.html
+++ b/design/templates/OpenGame/admin/settings.tpl.html
@@ -154,6 +154,14 @@
         {L_sys_dark_matter_sh} <input name="rpg_exchange_darkMatter" maxlength="10" size="8" value="{C_rpg_exchange_darkMatter}" type="text">
       </th>
     </tr>
+    <tr>
+      <th>{L_adm_uni_price_galaxy}</th>
+      <th><input name="uni_price_galaxy" maxlength="20" size="20" value="{C_uni_price_galaxy}" type="text"></th>
+    </tr>
+    <tr>
+      <th>{L_adm_uni_price_system}</th>
+      <th><input name="uni_price_system" maxlength="20" size="20" value="{C_uni_price_system}" type="text"></th>
+    </tr>
 
     <tr><td class="c" colspan="2">{L_adm_opt_plan_settings}</td></tr>
     <tr>
@@ -172,20 +180,6 @@
         <div class="fl" style="width: 5.5em;">{L_sys_energy}</div>
         <div><input name="energy_basic_income" maxlength="10" size="9" value="{C_energy_basic_income}" type="text"> {L_adm_opt_per_hour}</div>
       </th>
-    </tr>
-    <tr>
-      <th>{L_adm_uni_price_galaxy}</th>
-      <th><input name="uni_price_galaxy" maxlength="20" size="20" value="{C_uni_price_galaxy}" type="text"></th>
-    </tr>
-    <tr>
-      <th>{L_adm_uni_price_system}</th>
-      <th><input name="uni_price_system" maxlength="20" size="20" value="{C_uni_price_system}" type="text"></th>
-    </tr>
-
-    <tr><td class="c" colspan="2">{L_adm_opt_chat}</td></tr>
-    <tr>
-      <th>{L_adm_opt_chat_timeout}</th>
-      <th><input name="chat_timeout" maxlength="80" size="10" value="{C_chat_timeout}" type="text"> {L_sys_sec} {L_adm_opt_game_zero_dsiable}</th>
     </tr>
 
     <tr><td class="c" colspan="2">{L_adm_opt_links}</td></tr>
@@ -275,11 +269,26 @@
       <th><input name="fleet_bashing_war_delay" maxlength="10" size="10" value="{C_fleet_bashing_war_delay}" type="text"> {L_sys_sec}</th>
     </tr>
 
-    <tr><td class="c" colspan="2">{L_adm_opt_game_advertise}</td></tr>
+    <tr><td class="c" colspan="2">{L_adm_opt_stats_and_records}</td></tr>
     <tr>
-      <th colspan=2>
-        <input name="advGoogleLeftMenuIsOn" id="advGoogleLeftMenuIsOn" type="checkbox" value="1"<!-- IF ADV_LEFT_MENU --> checked<!-- ENDIF -->/> <label for="advGoogleLeftMenuIsOn">{L_adm_opt_game_oth_adds}</label>
-        <textarea name="advGoogleLeftMenuCode" rows="10">{C_advGoogleLeftMenuCode}</textarea>
+      <th>{L_adm_opt_stats_schedule}</th>
+      <th>
+        <input name="stats_schedule" size="40" maxlength="254" value="{C_stats_schedule}" type="text"><br />
+        {L_adm_opt_stats_schedule_detail}
+      </th>
+    </tr>
+    <tr>
+      <th><label for="stats_hide_admins">{L_adm_opt_stats_hide_admins}</label></th>
+      <th>
+        <input name="stats_hide_admins" id="stats_hide_admins" type="checkbox" value="1"<!-- IF STATS_HIDE_ADMINS --> checked<!-- ENDIF -->/>
+        {L_adm_opt_stats_hide_admins_detail}
+      </th>
+    </tr>
+    <tr>
+      <th>{L_adm_opt_stats_hide_player_list}</th>
+      <th>
+        <input name="stats_hide_player_list" size="40" maxlength="254" value="{C_stats_hide_player_list}" type="text"><br />
+        {L_adm_opt_stats_hide_player_list_detail}
       </th>
     </tr>
 
@@ -313,13 +322,27 @@
       <th><input name="game_counter" id="game_counter" type="checkbox" value="1"<!-- IF GAME_COUNTER --> checked<!-- ENDIF --> /></th>
     </tr>
 
+    <tr><td class="c" colspan="2">{L_adm_opt_chat}</td></tr>
+    <tr>
+      <th>{L_adm_opt_chat_timeout}</th>
+      <th><input name="chat_timeout" maxlength="80" size="10" value="{C_chat_timeout}" type="text"> {L_sys_sec} {L_adm_opt_game_zero_dsiable}</th>
+    </tr>
+
+    <tr><td class="c" colspan="2">{L_adm_opt_game_advertise}</td></tr>
+    <tr>
+      <th colspan=2>
+        <input name="advGoogleLeftMenuIsOn" id="advGoogleLeftMenuIsOn" type="checkbox" value="1"<!-- IF ADV_LEFT_MENU --> checked<!-- ENDIF -->/> <label for="advGoogleLeftMenuIsOn">{L_adm_opt_game_oth_adds}</label>
+        <textarea name="advGoogleLeftMenuCode" rows="10">{C_advGoogleLeftMenuCode}</textarea>
+      </th>
+    </tr>
+
     <tr><td class="c" colspan="2">{L_adm_opt_experimental}</td></tr>
     <th colspan="2">
-     <div style="width: 670px">
-       <input name="tpl_minifier" id="tpl_minifier" type="checkbox" value="1"<!-- IF TPL_MINIFIER --> checked<!-- ENDIF --> />&nbsp;<label for="tpl_minifier">{L_adm_opt_tpl_minifier}</label><br />
-       <label for="tpl_minifier">{L_adm_opt_tpl_minifier_hint}</label>
-     </div>
-   </th>
+      <div style="width: 670px">
+        <input name="tpl_minifier" id="tpl_minifier" type="checkbox" value="1"<!-- IF TPL_MINIFIER --> checked<!-- ENDIF --> />&nbsp;<label for="tpl_minifier">{L_adm_opt_tpl_minifier}</label><br />
+        <label for="tpl_minifier">{L_adm_opt_tpl_minifier_hint}</label>
+      </div>
+    </th>
 
     <tr><td class="c" colspan="2"><center><input name="save" value="{L_adm_opt_btn_save}" type="submit"></center></td></tr>
   </tbody></table>
