CHT-feat-35a10.0: Incremental chat

--- a/design/templates/OpenGame/chat_body.tpl.html
+++ b/design/templates/OpenGame/chat_body.tpl.html
@@ -1,7 +1,6 @@
 <!--[if IE]><style type="text/css"><!-- #chat_box {width: 80%;} --></style><![endif]-->
 <script type="text/javascript">
   var ally_id = "{ALLY}";
-  var language = {'chat_timeout': '{L_chat_timeout}'};
 </script>
 
 <script type="text/javascript" src="js/chat.js"></script>
@@ -9,12 +8,15 @@
 <form name="chat_form">
 <table id="chat_box"><tbody>
 
-  <tr><td class="c"><span class="fl"><b><!-- IF ALLY -->{L_chat_ally}<!-- ELSE -->{L_chat_common}<!-- ENDIF --></b></span><span class="fr"><a onClick="window.open('chat_msg.php?ally=' + ally_id + '&history=history', 'ChatHistory', '');">{L_chat_history}</a></span></td></tr>
+  <tr><td class="c">
+    <span class="fl"><b>{PAGE_HEADER}</b></span>
+    <span class="fr"><a onClick="window.open('chat_msg.php?ally={ALLY}&history=history', 'ChatHistory', '');">{L_chat_history}</a></span>
+  </td></tr>
 
-  <tr><th><div id="shoutbox" style="margin: 5px; vertical-align: text-top; height: 380px; overflow:auto;"></div></th></tr>
+  <tr><th><div id="shoutbox" style="margin: 5px; vertical-align: text-top; height: 380px; overflow: auto;"></div></th></tr>
 
-  <tr><th nowrap>{L_chat_message}:&nbsp;<select name="color" id="chat_color">
-      <option value="white">white</option>
+  <tr id="chat_message_inputs"><th nowrap>{L_chat_message}:&nbsp;<select name="color" id="chat_color">
+      <option value="">white</option>
       <option value="blue">blue</option>
       <option value="yellow">yellow</option>
       <option value="green">green</option>
@@ -24,9 +26,9 @@
     </select>&nbsp;<input name="msg" type="text" id="msg" style="width:70%" maxlength="120" onKeyPress="if(event.keyCode == 13){document.chat_form.send.click();event.returnValue = false;return false;}">&nbsp;<input type="button" name="send" value="{L_chat_send}" id="send" onClick="addMessage();event.returnValue = false;return false;"></th>
   </tr>
 
-  <tr>
+  <tr id="chat_message_smiles">
     <th nowrap>
-      <div nowrap>  
+      <div nowrap>
         <img src="design/images/smileys/aggressive.gif" align="absmiddle" title=":agr:" alt=":agr:" onClick="addSmiley(':agr:')">
         <img src="design/images/smileys/angel.gif" align="absmiddle" title=":angel:" alt=":angel:" onClick="addSmiley(':angel:')">
         <img src="design/images/smileys/bad.gif" align="absmiddle" title=":bad:" alt=":bad:" onClick="addSmiley(':bad:')">
@@ -44,7 +46,7 @@
         <img src="design/images/smileys/give_rose.gif" align="absmiddle" title=":rose:" alt=":rose:" onClick="addSmiley(':rose:')">
         <img src="design/images/smileys/good.gif" align="absmiddle" title=":good:" alt=":good:" onClick="addSmiley(':good:')">
         <img src="design/images/smileys/huh.gif" align="absmiddle" title=":huh:" alt=":huh:" onClick="addSmiley(':huh:')">
-        <img src="design/images/smileys/lol.gif" align="absmiddle" title=":D" alt=":D" onClick="addSmiley(':D:')"><br>
+        <img src="design/images/smileys/lol.gif" align="absmiddle" title=":D" alt=":D" onClick="addSmiley(':D:')">
         <img src="design/images/smileys/mellow.gif" align="absmiddle" title=":(" alt=":(" onClick="addSmiley(':(')"> 
         <img src="design/images/smileys/yu.gif" align="absmiddle" title=":yu" alt=":yu" onClick="addSmiley(':yu')">
         <img src="design/images/smileys/unknw.gif" align="absmiddle" title=":unknw:" alt=":unknw:" onClick="addSmiley(':unknw:')">
