--- a/design/templates/OpenGame/chat_messages.tpl.html
+++ b/design/templates/OpenGame/chat_messages.tpl.html
@@ -13,6 +13,13 @@
     <!-- ENDIF -->
   </div>
 <!-- ENDIF -->
+
 <!-- BEGIN chat -->
-  <div align="left" style='background-color:black;color:white;'><span style='font:menu;'>[{chat.TIME}]</span> <span style='font:menu;'><b>{chat.NICK}</b></span> : {chat.TEXT}<br></div>
+  <div align="left" style='background-color:black;color:white;'>
+    <!-- IF chat.TIME --><span style='font:menu;'>[{chat.TIME}]</span><!-- ENDIF -->
+    <!-- IF chat.NICK --><span style='font:menu;'><b>{chat.NICK}</b></span>:<!-- ENDIF -->
+    <!-- IF chat.TEXT -->{chat.TEXT}<!-- ENDIF -->
+    <!-- IF chat.DISABLE --><span class="warning">{L_chat_timeout}</span><!-- ENDIF -->
+    <br>
+  </div>
 <!-- END chat -->
