--- a/design/templates/OpenGame/fleet_aks_invite.tpl.html
+++ b/design/templates/OpenGame/fleet_aks_invite.tpl.html
@@ -1,18 +1,28 @@
 <br>
-<center>
-  {vacation}
-  <table width="519" border="0" cellpadding="0" cellspacing="1">
-   <tr height="20"><td class="c">Игроки в САБ</td><td class="c">Приглашение игрока</td></tr>
-   <tr>
-     <td width="50%" align="center"><select size="5">{members}</select></td>
+{vacation}
+<table border="0" cellpadding="0" cellspacing="1">
+ <tr>
+   <th class="c_l">{L_flt_aks_players_in_aks}</th>
+ </tr>
+ <tr>
+   <td align="center">
+     <select size="5">
+       <!-- BEGIN invited -->
+         <option>{invited.NAME}</option>
+       <!-- END invited -->
+     </select>
+   </td>
+ </tr>
 
-     <td>
-       <form action="fleet.php?fleet_page=4" method="POST">
-         <input type="hidden" name="fleetid" value="{fleetid}">
-         <input name="addtogroup" type="text" /> <br /><input type="submit" value="OK" />
-       </form><br />
-       {add_user_message_mr}
-     </td>
-   </tr>
- </table>
-</center>
+ <tr>
+   <td>
+     <form action="fleet.php?fleet_page=4" method="POST">
+       <input type="hidden" name="fleetid" value="{FLEET_ID}">
+       {L_flt_aks_player_invite} <input name="addtogroup" type="text" /> <input type="submit" value="{L_flt_aks_player_invite_do}" />
+     </form>
+     <!-- IF MESSAGE -->
+     <br />{MESSAGE}
+     <!-- ENDIF -->
+   </td>
+ </tr>
+</table>
